Tests/CompilerTests/negative/missing-context.expected
negative/missing-context.hylo:10.7-10: error: not enough context to infer a type
  _ = A()
      ~~~
negative/missing-context.hylo:11.3-4: error: not enough context to infer a type
  g(())
  ^
